deployments/apps/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jenkins.${SECRET_DOMAIN_2}
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN_2}
    external-dns.alpha.kubernetes.io/ttl: "120"
    external-dns/is-public: "true"
    kubernetes.io/ingress.class: "nginx"
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.${SECRET_DOMAIN_2}
    http:
      paths:
      - backend:
          service:
            name: jenkins-operator-http-jenkins
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jenkins.${SECRET_DOMAIN_2}
